packages/svelte/tests/compiler-errors/samples/runes-duplicate-props/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'props_duplicate',
		message: 'Cannot use `$props()` more than once'
	}
});
